First steps towards rationalising fbtk, split teh scrollbar widgets out
svn path=/trunk/netsurf/; revision=10466

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -102,7 +102,7 @@ S_AMIGA := $(addprefix amiga/,$(S_AMIGA))
 # S_FRAMEBUFFER are sources purely for the framebuffer build
 S_FRAMEBUFFER := gui.c framebuffer.c tree.c history.c hotlist.c 	\
         save.c schedule.c thumbnail.c misc.c bitmap.c filetype.c	\
-	login.c	findfile.c fbtk.c
+	login.c	findfile.c fbtk.c fbtk_widget_scroll.c
 
 S_FRAMEBUFFER += font_$(NETSURF_FB_FONTLIB).c
 
