--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -57,7 +57,7 @@ NETSURF_USE_MNG := YES
 # There is no auto-detection available for this, as it does not have a
 # pkg-config file.
 # Valid options: YES, NO
-NETSURF_USE_HARU_PDF := YES
+NETSURF_USE_HARU_PDF := NO
 
 # Enable stripping the NetSurf binary
 # Valid options: YES, NO
