Allow building of AmigaOS4 Cairo and non-Cairo versions of NetSurf in same source tree
svn path=/trunk/netsurf/; revision=10544

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -162,7 +162,7 @@ endif
 
 ifeq ($(TARGET),amiga)
 SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_AMIGA) $(S_PDF)
-EXETARGET := NetSurf
+EXETARGET := NetSurf$(SUBTARGET)
 endif
 
 ifeq ($(TARGET),framebuffer)
