Build libparserutils (and NetSurf) against libiconv instead of newlib's iconv. This fixes the bug with lpu's iconv filter causing freezing on OS4 NetSurf.  With an appropriate font (eg. Bitstream Cyberbit) Japanese characters will now display. Test websites work, but proper Japanese websites cause an assert which may be caused by amiga/font.c incorrect text size calculations.
svn path=/trunk/netsurf/; revision=10546

--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -189,6 +189,10 @@ endif
 # ----------------------------------------------------------------------------
 ifeq ($(TARGET),amiga)
 
+  # Force using glibc internal iconv implementation instead of external libiconv
+  # Valid options: YES, NO
+  NETSURF_USE_LIBICONV_PLUG := NO
+
   # Enable NetSurf's use of librosprite for displaying RISC OS Sprites
   # Valid options: YES, NO, AUTO
   NETSURF_USE_ROSPRITE := YES
