--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -82,7 +82,7 @@ NETSURF_USE_LIBICONV_PLUG := YES
 CFLAGS := 
 
 # Default installation/execution prefix
-PREFIX := /usr/local
+PREFIX ?= /usr/local
 
 # ----------------------------------------------------------------------------
 # RISC OS-specific options
