--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -191,7 +191,7 @@ ifeq ($(TARGET),amiga)
 
   # Force using glibc internal iconv implementation instead of external libiconv
   # Valid options: YES, NO
-  NETSURF_USE_LIBICONV_PLUG := NO
+  NETSURF_USE_LIBICONV_PLUG := YES
 
   # Enable NetSurf's use of librosprite for displaying RISC OS Sprites
   # Valid options: YES, NO, AUTO
