--- a/Makefile.sources
+++ b/Makefile.sources
@@ -11,8 +11,8 @@ S_CSS := css.c dump.c internal.c select.c utils.c
 S_RENDER := box.c box_construct.c box_normalise.c directory.c favicon.c \
 	font.c form.c html.c html_interaction.c html_redraw.c		\
 	hubbub_binding.c imagemap.c layout.c list.c table.c textplain.c
-S_UTILS := base64.c filename.c hashtable.c http.c locale.c		\
-	 messages.c talloc.c url.c utf8.c utils.c useragent.c
+S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
+	talloc.c url.c utf8.c utils.c useragent.c findresource.c
 S_DESKTOP := knockout.c options.c plot_style.c print.c search.c \
 	searchweb.c scroll.c textarea.c tree.c version.c
 
