--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -51,7 +51,7 @@ NETSURF_USE_PNG := YES
 
 # Enable NetSurf's use of libmng for displaying MNGs, JNGs and PNGs
 # Valid options: YES, NO	  (at least one of PNG/MNG highly recommended)
-NETSURF_USE_MNG := YES
+NETSURF_USE_MNG := NO
 
 # Enable NetSurf's use of libwebp/libvpx for displaying WebPs
 # Valid options: YES, NO
@@ -145,6 +145,10 @@ ifeq ($(TARGET),gtk)
   # Enable NetSurf's use of librosprite for displaying RISC OS Sprites
   # Valid options: YES, NO, AUTO
   NETSURF_USE_ROSPRITE := AUTO
+
+  # Enable NetSurf's use of libwebp/libvpx for displaying WebPs
+  # Valid options: YES, NO
+  NETSURF_USE_WEBP := YES
 
   # Configuration overrides for Mac OS X
   ifeq ($(HOST),macosx)
