--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -51,7 +51,7 @@ NETSURF_USE_PNG := YES
 
 # Enable NetSurf's use of libmng for displaying MNGs, JNGs and PNGs
 # Valid options: YES, NO	  (at least one of PNG/MNG highly recommended)
-NETSURF_USE_MNG := NO
+NETSURF_USE_MNG := YES
 
 # Enable NetSurf's use of libwebp/libvpx for displaying WebPs
 # Valid options: YES, NO
