--- a/Makefile.sources
+++ b/Makefile.sources
@@ -12,7 +12,7 @@ S_RENDER := box.c box_construct.c box_normalise.c favicon.c \
 	font.c form.c html.c html_interaction.c html_redraw.c		\
 	hubbub_binding.c imagemap.c layout.c list.c table.c textplain.c
 S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
-	talloc.c url.c utf8.c utils.c useragent.c findresource.c
+	talloc.c url.c utf8.c utils.c useragent.c findresource.c log.c
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	options.c plot_style.c print.c search.c searchweb.c scroll.c	\
 	sslcert.c textarea.c tree.c tree_url_node.c version.c		\
