--- a/Makefile.sources
+++ b/Makefile.sources
@@ -1,18 +1,21 @@
 #
 # NetSurf source file inclusion
 #
-# Included by main makefile -- indicates sources
-# for each build.
+# Included by main makefile -- indicates generic sources for every build.
 #
 
 S_CONTENT := content.c dirlist.c fetch.c hlcache.c llcache.c urldb.c	\
 	fetchers/fetch_curl.c fetchers/fetch_data.c fetchers/fetch_file.c
+
 S_CSS := css.c dump.c internal.c select.c utils.c
-S_RENDER := box.c box_construct.c box_normalise.c favicon.c \
+
+S_RENDER := box.c box_construct.c box_normalise.c favicon.c 		\
 	font.c form.c html.c html_interaction.c html_redraw.c		\
 	hubbub_binding.c imagemap.c layout.c list.c table.c textplain.c
+
 S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
 	talloc.c url.c utf8.c utils.c useragent.c findresource.c log.c
+
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	options.c plot_style.c print.c search.c searchweb.c scroll.c	\
 	sslcert.c textarea.c tree.c tree_url_node.c version.c		\
@@ -39,86 +42,6 @@ S_BROWSER := browser.c download.c frames.c history_core.c netsurf.c	\
 	save_complete.c save_text.c selection.c textinput.c
 S_BROWSER := $(addprefix desktop/,$(S_BROWSER))
 
-# S_RISCOS are sources purely for the RISC OS build
-S_RISCOS := 401login.c artworks.c assert.c awrender.s bitmap.c buffer.c	\
-	cookies.c configure.c debugwin.c dialog.c download.c draw.c	\
-	filetype.c font.c global_history.c gui.c help.c history.c	\
-	hotlist.c image.c menus.c message.c palettes.c plotters.c	\
-	plugin.c print.c query.c save.c save_draw.c save_pdf.c		\
-	schedule.c search.c searchweb.c sprite.c sslcert.c		\
-	textarea.c textselection.c theme.c theme_install.c thumbnail.c	\
-	treeview.c ucstables.c uri.c url_complete.c url_protocol.c	\
-	url_suggest.c wimp.c wimp_event.c window.c gui/progress_bar.c	\
-	gui/status_bar.c						\
-	$(addprefix configure/,con_cache.c con_connect.c con_content.c	\
-	con_fonts.c con_home.c con_image.c con_inter.c con_language.c	\
-	con_memory.c con_secure.c con_theme.c)
-S_RISCOS := $(addprefix riscos/,$(S_RISCOS))
-TPL_RISCOS := de en fr nl # TODO: It'd be nice to auto-detect these
-TPL_RISCOS := $(addprefix riscos/templates/,$(TPL_RISCOS))
-
-# S_GTK are sources purely for the GTK build
-S_GTK := font_pango.c gtk_bitmap.c gtk_gui.c gtk_schedule.c		\
-	gtk_thumbnail.c gtk_plotters.c gtk_treeview.c gtk_scaffolding.c	\
-	gtk_completion.c gtk_login.c gtk_throbber.c gtk_selection.c	\
-	gtk_history.c gtk_window.c gtk_filetype.c gtk_download.c	\
-	gtk_menu.c gtk_print.c gtk_save.c gtk_search.c gtk_tabs.c	\
-	gtk_theme.c gtk_toolbar.c sexy_icon_entry.c gtk_compat.c	\
-	gtk_cookies.c gtk_hotlist.c					\
-	$(addprefix dialogs/,gtk_options.c gtk_about.c gtk_source.c)
-S_GTK := $(addprefix gtk/,$(S_GTK)) $(addprefix utils/,container.c)
-# code in utils/container.ch is non-universal it seems
-
-# S_WINDOWS are sources purely for the windows build
-S_WINDOWS := about.c bitmap.c download.c filetype.c findfile.c font.c	\
-	gui.c localhistory.c login.c misc.c plot.c prefs.c schedule.c	\
-	thumbnail.c tree.c windbg.c
-S_WINDOWS := $(addprefix windows/,$(S_WINDOWS)) 
-
-# S_BEOS are sources purely for the BeOS build
-S_BEOS := beos_about.cpp beos_bitmap.cpp beos_fetch_rsrc.cpp		\
-	beos_filetype.cpp beos_font.cpp beos_gui.cpp beos_login.cpp	\
-	beos_options.cpp beos_plotters.cpp beos_save_complete.cpp	\
-	beos_scaffolding.cpp beos_search.cpp beos_schedule.cpp		\
-	beos_thumbnail.cpp beos_treeview.cpp beos_throbber.cpp		\
-	beos_window.cpp
-S_BEOS := $(addprefix beos/,$(S_BEOS))
-RDEF_BEOS := beos_res.rdef
-RDEF_BEOS := $(addprefix beos/,$(RDEF_BEOS))
-RDEP_BEOS := adblock.css beosdefault.css default.css ca-bundle.txt	\
-	messages
-RDEP_BEOS := $(addprefix beos/res/,$(RDEP_BEOS))			\
-	$(wildcard beos/res/throbber/throbber*.png)
-
-# S_AMIGA are sources purely for the Amiga build
-S_AMIGA := compat.c gui.c tree.c history.c hotlist.c schedule.c		\
-	thumbnail.c misc.c bitmap.c font.c filetype.c utf8.c login.c	\
-	plotters.c object.c menu.c save_pdf.c arexx.c version.c		\
-	cookies.c context_menu.c clipboard.c save_complete.c		\
-	fetch_mailto.c search.c history_local.c		\
-	download.c iff_dr2d.c sslcert.c gui_options.c print.c		\
-	theme.c	\
-	stringview/stringview.c stringview/urlhistory.c
-S_AMIGA := $(addprefix amiga/,$(S_AMIGA))
-
-
-# S_FRAMEBUFFER are sources purely for the framebuffer build
-S_FRAMEBUFFER := gui.c framebuffer.c tree.c save.c schedule.c		\
-	thumbnail.c misc.c bitmap.c filetype.c login.c findfile.c	\
-	localhistory.c
-
-S_FRAMEBUFFER_FBTK := fbtk.c event.c fill.c bitmap.c user.c window.c 	\
-	text.c scroll.c osk.c 
-
-S_FRAMEBUFFER += font_$(NETSURF_FB_FONTLIB).c
-
-ifeq ($(NETSURF_FB_FONTLIB),internal)
-S_FRAMEBUFFER += nsfont_regular.c nsfont_italic.c nsfont_bold.c		\
-	nsfont_italic_bold.c 
-endif
-
-S_FRAMEBUFFER := $(addprefix framebuffer/,$(S_FRAMEBUFFER)) $(addprefix framebuffer/fbtk/,$(S_FRAMEBUFFER_FBTK))
-
 
 # Some extra rules for building the transliteration table.
 ifeq ($(HOST),riscos)
@@ -138,49 +61,3 @@ clean-intermediates:
 	$(Q)$(RM) utils/translit.c
 
 CLEANS += clean-intermediates
-
-# Finally select the correct set of sources for this build...
-
-ifeq ($(TARGET),riscos)
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_PDF) $(S_RISCOS)
-EXETARGET := !NetSurf/!RunImage$(EXEEXT)
-
-!NetSurf/!Run$(RUNEXT): riscos/scripts/Run $(EXETARGET)
-	$(VQ)echo " MAKERUN: $@"
-	$(Q)$(MAKERUN) $(EXETARGET) $< $@
-POSTEXES += !NetSurf/!Run$(RUNEXT)
-
-clean-run:
-	$(VQ)echo "   CLEAN: !NetSurf/!Run$(RUNEXT)"
-	$(Q) $(RM) !NetSurf/!Run$(RUNEXT)
-CLEANS += clean-run
-endif
-
-ifeq ($(TARGET),gtk)
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_PDF) $(S_GTK)
-EXETARGET := nsgtk
-endif
-
-ifeq ($(TARGET),beos)
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_BEOS)
-EXETARGET := NetSurf
-endif
-
-ifeq ($(TARGET),amiga)
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_AMIGA) $(S_PDF)
-EXETARGET := NetSurf$(SUBTARGET)
-endif
-
-ifeq ($(TARGET),framebuffer)
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_FRAMEBUFFER) $(S_IMAGES)
-EXETARGET := nsfb$(SUBTARGET)
-endif
-
-ifeq ($(TARGET),windows)
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_WINDOWS) $(S_RESOURCES)
-EXETARGET := NetSurf.exe
-endif
-
-ifeq ($(SOURCES),)
-$(error Unable to build NetSurf, could not determine set of sources to build)
-endif
