--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -209,6 +209,10 @@ ifeq ($(TARGET),amiga)
   # Valid options: YES, NO
   NETSURF_USE_WEBP := YES
 
+  # Enable NetSurf to display Amiga icons 
+  # Valid options: YES, NO                 (recommended)
+  NETSURF_USE_AMIGA_ICON := YES
+
   # Enable NetSurf's use of libsvgtiny for displaying SVGs
   # (NB: Requires NETSURF_AMIGA_USE_CAIRO)
   # Valid options: YES, NO
