--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -17,6 +17,7 @@ $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 $(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
 $(eval $(call feature_enabled,MNG,,-llcms -ljpeg,PNG/JNG/MNG (libmng)))
 $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp -lvpx,WebP (libwebp)))
+$(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon        ))
 
 CFLAGS += -D__USE_INLINE__ -std=c99 -I . -I /SDK/local/common/include/libpng12 -Dnsamiga
 LDFLAGS += -lxml2 -lcurl -lpthread -lregex -lauto
@@ -38,7 +39,7 @@ S_AMIGA := compat.c gui.c tree.c history.c hotlist.c schedule.c		\
 	plotters.c object.c menu.c save_pdf.c arexx.c version.c		\
 	cookies.c context_menu.c clipboard.c save_complete.c		\
 	fetch_mailto.c search.c history_local.c	download.c iff_dr2d.c 	\
-	sslcert.c gui_options.c print.c	theme.c	drag.c			\
+	sslcert.c gui_options.c print.c	theme.c	drag.c icon.c			\
 	stringview/stringview.c stringview/urlhistory.c
 S_AMIGA := $(addprefix amiga/,$(S_AMIGA))
 
