--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -26,7 +26,9 @@ LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet -liconv
 ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
   CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
   LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
-  SUBTARGET := -cairo
+  EXETARGET := NetSurf-Cairo
+else
+  EXETARGET := NetSurf
 endif
 
 # ----------------------------------------------------------------------------
@@ -45,4 +47,3 @@ S_AMIGA := $(addprefix amiga/,$(S_AMIGA))
 
 # complete source file list
 SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_AMIGA) $(S_PDF)
-EXETARGET := NetSurf$(SUBTARGET)
