--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -20,7 +20,7 @@ $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp -lvpx,WebP (libwebp)))
 $(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon        ))
 
 CFLAGS += -D__USE_INLINE__ -std=c99 -I . -I /SDK/local/common/include/libpng12 -Dnsamiga
-LDFLAGS += -lxml2 -lcurl -lpthread -lregex -lauto
+LDFLAGS += -lxml2 -lcurl -lrtmp -lpthread -lregex -lauto
 LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet -liconv
 
 ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
