--- a/Makefile.sources
+++ b/Makefile.sources
@@ -17,8 +17,8 @@ S_UTILS := base64.c filename.c hashtable.c http.c locale.c messages.c 	\
 	talloc.c url.c utf8.c utils.c useragent.c findresource.c log.c
 
 S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
-	options.c plot_style.c print.c search.c searchweb.c scroll.c	\
-	sslcert.c textarea.c tree.c tree_url_node.c version.c		\
+	mouse.c options.c plot_style.c print.c search.c searchweb.c	\
+	scroll.c sslcert.c textarea.c tree.c tree_url_node.c version.c	\
 
 # S_COMMON are sources common to all builds
 S_COMMON := $(addprefix content/,$(S_CONTENT))				\
