--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -2,6 +2,7 @@
 # Amiga target setup
 # ----------------------------------------------------------------------------
 
+CFLAGS += -std=c99 -I . -Dnsamiga
 
 NETSURF_FEATURE_ROSPRITE_CFLAGS := -DWITH_NSSPRITE
 NETSURF_FEATURE_BMP_CFLAGS := -DWITH_BMP
@@ -10,24 +11,41 @@ NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
 NETSURF_FEATURE_WEBP_CFLAGS := -DWITH_WEBP
 NETSURF_FEATURE_NSSVG_CFLAGS := -DWITH_NS_SVG
 
-$(eval $(call feature_enabled,ROSPRITE,-DWITH_NSSPRITE,-lrosprite,Sprite (librosprite)))
-$(eval $(call feature_enabled,BMP,-DWITH_BMP,-lnsbmp,BMP (libnsbmp)))
-$(eval $(call feature_enabled,GIF,-DWITH_GIF,-lnsgif,GIF (libnsgif)))
-$(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
-$(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
-$(eval $(call feature_enabled,MNG,,-llcms -ljpeg,PNG/JNG/MNG (libmng)))
-$(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp -lvpx,WebP (libwebp)))
-$(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon        ))
+ifeq ($(HOST),amiga)
+  $(eval $(call feature_enabled,ROSPRITE,-DWITH_NSSPRITE,-lrosprite,Sprite (librosprite)))
+  $(eval $(call feature_enabled,BMP,-DWITH_BMP,-lnsbmp,BMP (libnsbmp)))
+  $(eval $(call feature_enabled,GIF,-DWITH_GIF,-lnsgif,GIF (libnsgif)))
+  $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
+  $(eval $(call feature_enabled,NSSVG,-DWITH_NS_SVG,-lsvgtiny,SVG (libsvgtiny)))
+  $(eval $(call feature_enabled,MNG,,-llcms -ljpeg,PNG/JNG/MNG (libmng)))
+  $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp -lvpx,WebP (libwebp)))
+  $(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon        ))
 
-CFLAGS += -D__USE_INLINE__ -std=c99 -I . -I /SDK/local/common/include/libpng12 -Dnsamiga
-LDFLAGS += -lxml2 -lcurl -lrtmp -lpthread -lregex -lauto
-LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet -liconv
+  CFLAGS += -D__USE_INLINE__ -I /SDK/local/common/include/libpng12
+  LDFLAGS += -lxml2 -lcurl -lrtmp -lpthread -lregex -lauto
+  LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet -liconv
 
-ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
-  CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
-  LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
-  EXETARGET := NetSurf-Cairo
+  ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
+    CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
+    LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
+    EXETARGET := NetSurf-Cairo
+  else
+    EXETARGET := NetSurf
+  endif
 else
+  $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
+  $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
+  $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG))
+  $(eval $(call pkg_config_find_and_add,NSSVG,libsvgtiny,NSSVG))
+
+  CFLAGS += -I$(GCCSDK_INSTALL_ENV)/include
+  CFLAGS += $(shell $(PKG_CONFIG) --cflags libxml-2.0 libcares libcurl openssl)
+  CFLAGS += $(shell $(PKG_CONFIG) --cflags tre libhubbub libcss)
+
+  LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
+  LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcares libcurl openssl)
+  LDFLAGS += $(shell $(PKG_CONFIG) --libs tre libhubbub libcss)
+
   EXETARGET := NetSurf
 endif
 
