Define __USE_BASETYPE__, makes thumbnail.c compile again on OS4.  GfxBase changes will need to be made to other files in the same manner.
svn path=/trunk/netsurf/; revision=11234

--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -21,7 +21,7 @@ ifeq ($(HOST),amiga)
   $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp -lvpx,WebP (libwebp)))
   $(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon        ))
 
-  CFLAGS += -D__USE_INLINE__ -I /SDK/local/common/include/libpng12
+  CFLAGS += -D__USE_INLINE__ -D__USE_BASETYPE__ -I /SDK/local/common/include/libpng12
   LDFLAGS += -lxml2 -lcurl -lrtmp -lpthread -lregex -lauto
   LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet -liconv
 
