--- a/cocoa/config/NetSurf.xcconfig
+++ b/cocoa/config/NetSurf.xcconfig
@@ -6,8 +6,8 @@ GCC_MODEL_TUNING = G5
 ALWAYS_SEARCH_USER_PATHS = NO
 PRODUCT_NAME = NetSurf
 
-LOCAL_CONFIG_CFLAGS		=	-I/usr/local/include -I/usr/include/libxml2
-LOCAL_CONFIG_LDFLAGS	=	-L/usr/local/lib -lxml2 -lz -lpthread -licucore -lm -lssl -lhubbub -lcss -lcrypto -lparserutils -lwapcaplet -liconv -lcurl
+LOCAL_CONFIG_CFLAGS		=	-I/usr/local/include -I/usr/include/libxml2 -I/usr/X11/include -DWITH_PNG 
+LOCAL_CONFIG_LDFLAGS	=	-L/usr/local/lib -lxml2 -lz -lpthread -licucore -lm -lssl -lhubbub -lcss -lcrypto -lparserutils -lwapcaplet -liconv -lcurl -L/usr/X11/lib -lpng
 
 #include "local.xcconfig"
 
