Zooming, opening files, accepting http and https URLs
svn path=/trunk/netsurf/; revision=11310

--- a/cocoa/res/NetSurf-Info.plist
+++ b/cocoa/res/NetSurf-Info.plist
@@ -28,5 +28,17 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NetSurfApp</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>org.netsurf-browser.NetSurf.URI</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>http</string>
+				<string>https</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
