--- a/cocoa/config/common.xcconfig
+++ b/cocoa/config/common.xcconfig
@@ -5,5 +5,10 @@ OTHER_LDFLAGS =
 PREBINDING = NO
 HEADER_SEARCH_PATHS = ${SRCROOT}/../
 GCC_C_LANGUAGE_STANDARD = gnu99
+
 GCC_WARN_ABOUT_RETURN_TYPE = YES
 GCC_WARN_UNUSED_VARIABLE = YES
+GCC_WARN_MISSING_PARENTHESES = YES
+GCC_TREAT_IMPLICIT_FUNCTION_DECLARATIONS_AS_ERRORS = YES
+GCC_WARN_UNDECLARED_SELECTOR = YES
+GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES
