Nice back/forward buttons and moved refresh button into URL field (like Safari)
svn path=/trunk/netsurf/; revision=11477

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -71,6 +71,7 @@ S_COCOA := \
 	NetSurfAppDelegate.m \
 	NetsurfApp.m \
 	ScrollableView.m \
+	URLFieldCell.m \
 	TreeView.m \
 	bitmap.m \
 	fetch.m \
