Updated PSMTabBarControl source code to version from https://github.com/dergraf83/PSMTabBarControl
svn path=/trunk/netsurf/; revision=11490

--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -130,7 +130,10 @@ TABBAR_RESOURCES := AquaTabClose_Front_Pressed.png \
 	AquaTabCloseDirty_Front.png \
 	AquaTabNew.png \
 	AquaTabNewPressed.png \
-	AquaTabNewRollover.png
+	AquaTabNewRollover.png \
+	overflowImage.png \
+	overflowImagePressed.png \
+	pi.png
 
 R_RESOURCES += $(addprefix cocoa/PSMTabBarControl/Images/,$(TABBAR_RESOURCES))
 
