--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -57,14 +57,12 @@
 # ----------------------------------------------------------------------------
 
 # S_GTK are sources purely for the GTK build
-S_GTK := font_pango.c gtk_bitmap.c gtk_gui.c gtk_schedule.c		\
-	gtk_thumbnail.c gtk_plotters.c gtk_treeview.c gtk_scaffolding.c	\
-	gtk_completion.c gtk_login.c gtk_throbber.c gtk_selection.c	\
-	gtk_history.c gtk_window.c gtk_filetype.c gtk_download.c	\
-	gtk_menu.c gtk_print.c gtk_save.c gtk_search.c gtk_tabs.c	\
-	gtk_theme.c gtk_toolbar.c sexy_icon_entry.c gtk_compat.c	\
-	gtk_cookies.c gtk_hotlist.c					\
-	$(addprefix dialogs/,gtk_options.c gtk_about.c gtk_source.c)
+S_GTK := font_pango.c bitmap.c gui.c schedule.c thumbnail.c plotters.c	\
+	treeview.c scaffolding.c completion.c login.c throbber.c	\
+	selection.c history.c window.c filetype.c download.c menu.c	\
+	print.c save.c search.c tabs.c theme.c toolbar.c		\
+	sexy_icon_entry.c compat.c cookies.c hotlist.c			\
+	$(addprefix dialogs/,options.c about.c source.c)
 S_GTK := $(addprefix gtk/,$(S_GTK)) $(addprefix utils/,container.c)
 # code in utils/container.ch is non-universal it seems
 
