--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -61,7 +61,7 @@ S_GTK := font_pango.c bitmap.c gui.c schedule.c thumbnail.c plotters.c	\
 	treeview.c scaffolding.c completion.c login.c throbber.c	\
 	selection.c history.c window.c filetype.c download.c menu.c	\
 	print.c save.c search.c tabs.c theme.c toolbar.c		\
-	sexy_icon_entry.c compat.c cookies.c hotlist.c			\
+	sexy_icon_entry.c compat.c cookies.c hotlist.c system_colour.c	\
 	$(addprefix dialogs/,options.c about.c source.c)
 S_GTK := $(addprefix gtk/,$(S_GTK)) $(addprefix utils/,container.c)
 # code in utils/container.ch is non-universal it seems
