--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -40,7 +40,7 @@ S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	plot.c plot/plotter.c plot/plotter_vdi.c plot/eddi.s \
 	plot/font_vdi.c plot/font_freetype.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
-	global_evnt.c
+	global_evnt.c system_colour.c
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
 
