--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -89,7 +89,7 @@ S_BEOS := beos_about.cpp beos_bitmap.cpp beos_fetch_rsrc.cpp		\
 	beos_options.cpp beos_plotters.cpp beos_save_complete.cpp	\
 	beos_scaffolding.cpp beos_search.cpp beos_schedule.cpp		\
 	beos_thumbnail.cpp beos_treeview.cpp beos_throbber.cpp		\
-	beos_window.cpp
+	beos_window.cpp system_colour.cpp
 S_BEOS := $(addprefix beos/,$(S_BEOS))
 RDEF_BEOS := beos_res.rdef
 RDEF_BEOS := $(addprefix beos/,$(RDEF_BEOS))
