--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -5,7 +5,7 @@
 $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
-CFLAGS += -I/usr/GEM/include
+CFLAGS += -I/usr/GEM/include -DNO_IPV6
 LDFLAGS += -L/usr/GEM/lib -lcflib
 
 CFLAGS += -DATARI_USE_FREETYPE $(shell freetype-config --cflags)
@@ -36,11 +36,11 @@ LDFLAGS += -L/usr/lib/ -lxml2 -lz -lHermes -liconv -L/usr/lib -lwindom -lldg -lg
 # S_ATARI are sources purely for the Atari FreeMiNT build
 S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	download.c thumbnail.c login.c verify_ssl.c treeview.c hotlist.c history.c\
-	font.c \
+	search.c font.c \
 	plot.c plot/plotter.c plot/plotter_vdi.c plot/eddi.s \
 	plot/font_vdi.c plot/font_freetype.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
-	global_evnt.c system_colour.c
+	global_evnt.c osspec.c
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
 
